# stackoverflow-pad

questions/60049886/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  package-lock.json  package.json  webpack.config.js
questions/60049886/src/html/: index.html
questions/60049886/src/js/: index.tsx
questions/60049886/src/js/component/: App.tsx
template/python/: Dockerfile  README.md
